--- a/git/formuladb-env/frmdb-apps/themes/landing-page.html
+++ b/git/formuladb-env/frmdb-apps/themes/landing-page.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" id="frmdb-look-css" href="/formuladb-env/css/cosmo-cb8670-363636.css">
 </head>
 
-<body data-frmdb-theme="Clean">
+<body>
     <div class="frmdb-t-main-nav">
         <nav data-frmdb-fragment="_nav.html" src="_nav.html"></nav>
     </div>
