--- a/git/formuladb-env/frmdb-apps/restaurant/_form.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/_form.html
@@ -1,4 +1,4 @@
-<form class="p-3 was-validated" data-frmdb-fragment="_form.html" method="GET" action="order.html">
+<form class="p-3" data-frmdb-fragment="_form.html" method="GET" action="order.html">
 <div class="row">
     <div class="col-md-4 d-flex flex-column justify-content-center">
         <div class="form-group">
