--- a/git/formuladb-env/frmdb-apps/formuladb-io/index.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/index.html
@@ -5,8 +5,9 @@
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
+    <meta name="frmdb_featured_page_order" content="">
 </head>
-<body data-frmdb-tenant="frmdb-apps" data-frmdb-app="formuladb-io" class="frmdb-editor-preview">
+<body data-frmdb-tenant="frmdb-apps" data-frmdb-app="formuladb-io" class="frmdb-editor-normal pb-5">
     <style>
         .section#app-list .card-deck .card img {
             object-fit: cover;
@@ -14,7 +15,7 @@
         }
     </style>
     <div data-frmdb-fragment="versions.html"></div>
-    <header class="container-fluid frmdb-bg-2 frmdb-bg-1-primary-gradient frmdb-bg-2-circles" style="background-repeat: no-repeat, no-repeat; background-size: cover, cover;">
+    <header class="container-fluid frmdb-bg-2 frmdb-bg-1-primary-gradient frmdb-bg-2-circles pb-5" style="background-repeat: no-repeat, no-repeat; background-size: cover, cover;">
         <div data-frmdb-fragment="_nav.html"></div>
         <div class="container">
             <div class="row">
@@ -33,47 +34,47 @@
                     </div>
                 </div>
                 <div class="col-lg-7">
-                    <img src="/formuladb-env/frmdb-apps/formuladb-io/static/images/header.svg" alt="FormulaDB - All in one digital transformation platform" class="m-n0">
+                    <img src="/formuladb-env/frmdb-apps/formuladb-io/static/images/header.svg" alt="FormulaDB - All in one digital transformation platform" class="m-n4">
                 </div>
                 <div class="col-lg-2 mt-3">
-                    <div>
+                    <div class="">
                         <small>
                             <u class="text-white">for developers:</u>
                         </small>
-                        <p>
+                        <p class="text-left">
                             <small class="text-white">low-code unprecedented productivity
                                 <br>
                             </small>
                         </p>
                         <div class="btn-wrapper"></div>
                     </div>
-                    <div>
+                    <div class="">
                         <small>
                             <u class="text-white">for web designers:</u>
                         </small>
-                        <p>
+                        <p class="text-left">
                             <small class="text-white">bring your designs to life as fully functional web apps
                                 <br>
                             </small>
                         </p>
                         <div class="btn-wrapper"></div>
                     </div>
-                    <div>
+                    <div class="">
                         <small>
                             <u class="text-white">for managers:</u>
                         </small>
-                        <p>
+                        <p class="text-left">
                             <small class="text-white">get an edge with custom KPIs and dashboards unique to your business
                                 <br>
                             </small>
                         </p>
                         <div class="btn-wrapper"></div>
                     </div>
-                    <div>
+                    <div class="">
                         <small>
                             <u class="text-white">for startups:</u>
                         </small>
-                        <p>
+                        <p class="text-left">
                             <small class="text-white">move fast with no-code + low-code
                                 <br>
                             </small>
@@ -87,7 +88,7 @@
     <section id="app-list" class="section container-fluid px-5 section-lg pt-lg-0 mt-n5 position-relative">
         <a name="EXAMPLES"></a>
         <div class="container-fluid d-flex px-3 sticky-top rounded bg-light mb-4 shadow">
-            <div class="btn-group flex-wrap justify-content-center" role="group" aria-label="First group">
+            <div class="btn-group flex-wrap justify-content-center overflow-auto" role="group" aria-label="First group" style="max-height: 20vh;">
                 <button type="button" class="btn btn-light text-muted flex-grow-0" onclick="categFilter(this, '')">All Examples</button>
                 <button type="button" class="btn btn-light text-muted flex-grow-0" onclick="categFilter(this)" data-frmdb-table="$FRMDB.AppCategory[]" data-frmdb-value=":ID(_id):$FRMDB.AppCategory[]" data-frmdb-table-limit="20" data-frmdb-record="AppCategory~~e-Commerce">e-Commerce</button>
                 <button type="button" class="btn btn-light text-muted flex-grow-0" onclick="categFilter(this)" data-frmdb-table="$FRMDB.AppCategory[]" data-frmdb-value=":ID(_id):$FRMDB.AppCategory[]" data-frmdb-table-limit="20" data-frmdb-record="AppCategory~~Startup Management">Startup Management</button>
@@ -126,7 +127,7 @@
                     <a class="card-link stretched-link text-dark" href="javascript:$MODAL('add__WishListRequest.html', 'SampleApp~~100 Wellness services')" data-frmdb-attr="href::$FRMDB.SampleApp[].app_url" target="_blank">
                         <h5 class="card-title h-2-em" data-frmdb-value=":PROPER(SUBSTITUTE(name, &quot;-&quot;, &quot; &quot;)):$FRMDB.$App[]">Base App</h5>
                     </a>
-                    <h6 class="mb-2 border-bottom card-subtitle" data-frmdb-value="$FRMDB.$App[].category">Food &amp; Travel</h6>
+                    <h6 class="mb-2 border-bottom card-subtitle" data-frmdb-value="$FRMDB.$App[].category">Medical &amp; Health</h6>
                     <div style="overflow: hidden" class="my-2">
                         <img class="card-img-bottom" src="../base-app/static/index.png" alt="Card image cap" data-frmdb-value=":CONCATENATE(&quot;../&quot;,name,&quot;/static/index.png&quot;):$FRMDB.$App[]">
                     </div>
@@ -171,7 +172,7 @@
                     <a class="card-link stretched-link text-dark" href="javascript:$MODAL('add__WishListRequest.html', 'SampleApp~~100 Wellness services')" data-frmdb-attr="href::$FRMDB.SampleApp[].app_url" target="_blank">
                         <h5 class="card-title h-2-em" data-frmdb-value=":PROPER(SUBSTITUTE(name, &quot;-&quot;, &quot; &quot;)):$FRMDB.$App[]">Blog Add On App</h5>
                     </a>
-                    <h6 class="mb-2 border-bottom card-subtitle" data-frmdb-value="$FRMDB.$App[].category">Booking &amp; Appointments</h6>
+                    <h6 class="mb-2 border-bottom card-subtitle" data-frmdb-value="$FRMDB.$App[].category">Medical &amp; Health</h6>
                     <div style="overflow: hidden" class="my-2">
                         <img class="card-img-bottom" src="../blog-add-on-app/static/index.png" alt="Card image cap" data-frmdb-value=":CONCATENATE(&quot;../&quot;,name,&quot;/static/index.png&quot;):$FRMDB.$App[]">
                     </div>
@@ -221,21 +222,6 @@
                         <img class="card-img-bottom" src="../design-therapy/static/index.png" alt="Card image cap" data-frmdb-value=":CONCATENATE(&quot;../&quot;,name,&quot;/static/index.png&quot;):$FRMDB.$App[]">
                     </div>
                     <p class="border-top mt-2 text-muted" data-frmdb-value="$FRMDB.$App[].description">themes</p>
-                </div>
-            </div>
-            <div class="card hvr-float bg-white shadow" data-category="AppCategory~~Business Administration" data-frmdb-table="$FRMDB.$App[]" data-frmdb-record="$App~~formuladb-io" data-frmdb-table-limit="20">
-                <div class="card-rem card-body text-center">
-                    <div class="frmdb-ribbon frmdb-ribbon-top-left">
-                        <span data-frmdb-attr="class[success|warning]::$FRMDB.SampleApp[].status" data-frmdb-value="$FRMDB.SampleApp[].call_to_action" class="warning">Wish List</span>
-                    </div>
-                    <a class="card-link stretched-link text-dark" href="javascript:$MODAL('add__WishListRequest.html', 'SampleApp~~100 Wellness services')" data-frmdb-attr="href::$FRMDB.SampleApp[].app_url" target="_blank">
-                        <h5 class="card-title h-2-em" data-frmdb-value=":PROPER(SUBSTITUTE(name, &quot;-&quot;, &quot; &quot;)):$FRMDB.$App[]">Formuladb Io</h5>
-                    </a>
-                    <h6 class="mb-2 border-bottom card-subtitle" data-frmdb-value="$FRMDB.$App[].category">Medical &amp; Health</h6>
-                    <div style="overflow: hidden" class="my-2">
-                        <img class="card-img-bottom" src="../formuladb-io/static/index.png" alt="Card image cap" data-frmdb-value=":CONCATENATE(&quot;../&quot;,name,&quot;/static/index.png&quot;):$FRMDB.$App[]">
-                    </div>
-                    <p class="border-top mt-2 text-muted" data-frmdb-value="$FRMDB.$App[].description">formuladb.io</p>
                 </div>
             </div>
             <div class="card hvr-float bg-white shadow" data-category="AppCategory~~Business Administration" data-frmdb-table="$FRMDB.$App[]" data-frmdb-record="$App~~formuladb-university" data-frmdb-table-limit="20">
@@ -291,7 +277,7 @@
                     <a class="card-link stretched-link text-dark" href="javascript:$MODAL('add__WishListRequest.html', 'SampleApp~~100 Wellness services')" data-frmdb-attr="href::$FRMDB.SampleApp[].app_url" target="_blank">
                         <h5 class="card-title h-2-em" data-frmdb-value=":PROPER(SUBSTITUTE(name, &quot;-&quot;, &quot; &quot;)):$FRMDB.$App[]">Kids Playground</h5>
                     </a>
-                    <h6 class="mb-2 border-bottom card-subtitle" data-frmdb-value="$FRMDB.$App[].category">Food &amp; Travel, Booking &amp; Appointments</h6>
+                    <h6 class="mb-2 border-bottom card-subtitle" data-frmdb-value="$FRMDB.$App[].category">Medical &amp; Health</h6>
                     <div style="overflow: hidden" class="my-2">
                         <img class="card-img-bottom" src="../kids-playground/static/index.png" alt="Card image cap" data-frmdb-value=":CONCATENATE(&quot;../&quot;,name,&quot;/static/index.png&quot;):$FRMDB.$App[]">
                     </div>
@@ -321,7 +307,7 @@
                     <a class="card-link stretched-link text-dark" href="javascript:$MODAL('add__WishListRequest.html', 'SampleApp~~100 Wellness services')" data-frmdb-attr="href::$FRMDB.SampleApp[].app_url" target="_blank">
                         <h5 class="card-title h-2-em" data-frmdb-value=":PROPER(SUBSTITUTE(name, &quot;-&quot;, &quot; &quot;)):$FRMDB.$App[]">Online Payments</h5>
                     </a>
-                    <h6 class="mb-2 border-bottom card-subtitle" data-frmdb-value="$FRMDB.$App[].category">Consulting</h6>
+                    <h6 class="mb-2 border-bottom card-subtitle" data-frmdb-value="$FRMDB.$App[].category">Medical &amp; Health</h6>
                     <div style="overflow: hidden" class="my-2">
                         <img class="card-img-bottom" src="../online-payments/static/index.png" alt="Card image cap" data-frmdb-value=":CONCATENATE(&quot;../&quot;,name,&quot;/static/index.png&quot;):$FRMDB.$App[]">
                     </div>
@@ -381,7 +367,7 @@
                     <a class="card-link stretched-link text-dark" href="javascript:$MODAL('add__WishListRequest.html', 'SampleApp~~100 Wellness services')" data-frmdb-attr="href::$FRMDB.SampleApp[].app_url" target="_blank">
                         <h5 class="card-title h-2-em" data-frmdb-value=":PROPER(SUBSTITUTE(name, &quot;-&quot;, &quot; &quot;)):$FRMDB.$App[]">Summer Villa</h5>
                     </a>
-                    <h6 class="mb-2 border-bottom card-subtitle" data-frmdb-value="$FRMDB.$App[].category">Photography</h6>
+                    <h6 class="mb-2 border-bottom card-subtitle" data-frmdb-value="$FRMDB.$App[].category">Medical &amp; Health</h6>
                     <div style="overflow: hidden" class="my-2">
                         <img class="card-img-bottom" src="../summer-villa/static/index.png" alt="Card image cap" data-frmdb-value=":CONCATENATE(&quot;../&quot;,name,&quot;/static/index.png&quot;):$FRMDB.$App[]">
                     </div>
@@ -447,7 +433,7 @@
         </div>
     </div>
     <div class="d-flex">
-        <input type="text" data-frmdb-filter="$FRMDB.SampleApp[].filter.long_img.notContains" value="under-construction" class="frmdb-hidden">
+        <input type="text" data-frmdb-filter="$FRMDB.$App[].filter.name.notMatch" value="formuladb-io" class="frmdb-hidden">
         <input type="text" id="categ-filter" data-frmdb-filter="$FRMDB.SampleApp[].filter.categories.contains" value="" class="frmdb-hidden">
     </div>
     <script>
