--- a/git/formuladb-env/frmdb-apps/summer-villa/index.html
+++ b/git/formuladb-env/frmdb-apps/summer-villa/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>FormulaDB Themes</title>
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="frmdb_display_date" content="">
+    <meta name="frmdb_featured_page_order" content="">
 </head>
 <body data-frmdb-theme="Comfort" class="text-center frmdb-editor-normal">
-    <frmdb-t-main-nav class="container bg-white fixed-top shadow">
+    <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/summer-villa/static/50e9d4434a5ab108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_1280.jpg&quot;);">
-        <frmdb-t-main class="flex-grow-1 d-flex flex-column justify-content-center">
-            <div class="jumbotron w-100 text-center bg-transparent">
+    <frmdb-t-cover class="d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/summer-villa/static/50e9d4434a5ab108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_1280.jpg&quot;);">
+        <frmdb-t-main class="flex-grow-1">
+            <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4" data-i18n="en">summer villa</h1>
                 <p>Lead paragraph providing a short introduction to you website or app,
@@ -17,7 +21,7 @@
                 </p>
             </div>
         </frmdb-t-main>
-        <frmdb-t-aside class="container frmdb-section-dark">
+        <frmdb-t-aside class="">
             <div data-frmdb-fragment="_form.html"></div>
         </frmdb-t-aside>
     </frmdb-t-cover>
@@ -27,46 +31,46 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+            <frmdb-t-card-media-main class="" style="display: grid;">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/52e3d2404a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">relaxing at the pool</h5>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)" data-i18n="en">BOOK A SUNBED</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" data-i18n="en" class="">BOOK A SUNBED</a>
                 </frmdb-t-card-action>
-                <frmdb-t-card-note></frmdb-t-card-note>
+                <frmdb-t-card-note class=""></frmdb-t-card-note>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+            <frmdb-t-card-media-main class="" style="display: grid;">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/52e4d4454f53a914f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">which room do you prefer?</h5>
                     <p data-i18n="en">Integer sit amet nisi viverra, pharetra</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)" data-i18n="en">SEE THE ROOMS</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" data-i18n="en" class="">SEE THE ROOMS</a>
                 </frmdb-t-card-action>
-                <frmdb-t-card-note></frmdb-t-card-note>
+                <frmdb-t-card-note class=""></frmdb-t-card-note>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+            <frmdb-t-card-media-main class="" style="display: grid;">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/52e4dc4a4f50b108f5d08460962936771d3edce4524c704c7d2f72d49f49c350_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">fresh menu daily</h5>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)" data-i18n="en">SEE THE MENU</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" data-i18n="en" class="">SEE THE MENU</a>
                 </frmdb-t-card-action>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+            <frmdb-t-card-media-main class="" style="display: grid;">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/5fe0d0464f55b108f5d08460962936771d3edce4524c704c7d2f72d49f48c451_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">enjoy the sea view terrace</h5>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)" data-i18n="en">MORE PHOTOS</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" data-i18n="en" class="">MORE PHOTOS</a>
                 </frmdb-t-card-action>
             </frmdb-t-card-media-main>
         </div>
@@ -75,7 +79,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
-                <div class="jumbotron w-100 text-center bg-transparent">
+                <div class="jumbotron">
                     <h2 data-i18n="en">welcome to our summer villa</h2>
                     <p>Etiam porta magna eu rutrum rhoncus. Sed ut tempor nibh. Nullam tempus egestas ullamcorper. Proin sollicitudin diam vel risus egestas, in
                         fringilla ligula finibus.</p>
@@ -89,7 +93,7 @@
             <img class="img-fluid" src="/formuladb-env/frmdb-apps/summer-villa/static/55e8d5474b50a514f6da8c7dda79367f1c37dfe752506c4870277bdd964cc45ab1_640.jpg" alt="...">
         </div>
     </section>
-    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/summer-villa/static/55e3dd4a4a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964dc35fba_1280.jpg&quot;);">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/summer-villa/static/55e3dd4a4a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964dc35fba_1280.jpg&quot;);" class="">
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2>Cards with Icons</h2>
@@ -97,39 +101,39 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Food
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon> Sports
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle"></frmdb-icon> Auto
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-tv-computer-display-monitor-television"></frmdb-icon> TV
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4>
                         <frmdb-icon name="fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor"></frmdb-icon> Drinks
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-water-lake-liquid-ocean-sea-swim-wet"></frmdb-icon> pool
                     </h4>
@@ -146,44 +150,44 @@
             <p data-i18n="en">Section lead paragraph, some text about the content described in this you section.</p>
         </div>
         <div class="card-deck">
-            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+            <frmdb-t-card-media-main class="" style="display: grid;">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/55e3d3474c57b108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">wine tour with lunch</h5>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)" data-i18n="en">BOOK A TOUR</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" data-i18n="en" class="">BOOK A TOUR</a>
                 </frmdb-t-card-action>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+            <frmdb-t-card-media-main class="" style="display: grid;">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/55e8d3474e54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c45bbf_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">flavours day trip in the city&nbsp;</h5>
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)" data-i18n="en">BOOK A TRIP</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" data-i18n="en" class="">BOOK A TRIP</a>
                 </frmdb-t-card-action>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+            <frmdb-t-card-media-main class="" style="display: grid;">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/52e1dd464f54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd964cc55fba_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">botanical gardens tour&nbsp;</h5>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)" data-i18n="en">BOOK A TOUR</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" data-i18n="en" class="">BOOK A TOUR</a>
                 </frmdb-t-card-action>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="border-0" style="display: grid;">
+            <frmdb-t-card-media-main class="" style="display: grid;">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/52e5d5464d57ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c651b8_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">antique market</h5>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)" data-i18n="en">SEE THE ADDRESS</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" data-i18n="en" class="">SEE THE ADDRESS</a>
                 </frmdb-t-card-action>
             </frmdb-t-card-media-main>
         </div>
@@ -191,6 +195,7 @@
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
 </html>
 </html>
